delete and refractored code

--- a/src/app/add-password/add-password.component.html
+++ b/src/app/add-password/add-password.component.html
@@ -12,7 +12,7 @@
   <div>
     <label for="password">Enter Password</label>
     <input required ngModel type="password" id="password" name="password" class="form-control">
-    <input type="checkbox" name="cbox" (click)="showPass()">Show Password
+    <input type="checkbox" name="cbox" (click)="showPassVisible()">Show Password
   </div>
   <button type="submit" mat-raised-button color="warn" [disabled]="!f.valid" (click)="savePassword()">Save</button>
 </form>
