--- a/src/app/passwords/passwords.component.html
+++ b/src/app/passwords/passwords.component.html
@@ -1,4 +1,5 @@
 <head></head>
+
 <body>
   <div class="container">
     <table>
@@ -8,11 +9,16 @@
       </tr>
       <tr>
         <td>
-          <tr *ngFor="let p of pass">{{p.name}}</tr>
-        </td>
-        <td>
-          <tr *ngFor="let p of pass">{{p.password}}</tr>
-        </td>
+      <tr *ngFor="let p of pass">{{p.name}}</tr>
+      </td>
+      <td>
+        <tr *ngFor="let p of pass">{{p.password}}</tr>
+      </td>
+      <!-- <td>
+        <tr>
+          <button mat-button>Delete Password</button>
+        </tr>
+      </td> -->
       </tr>
     </table>
   </div>
