--- a/src/app/view-passwords/view-passwords.component.html
+++ b/src/app/view-passwords/view-passwords.component.html
@@ -1,6 +1,6 @@
 <br>
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
+  <table mat-table #myTable [dataSource]="dataSource">
 
     <!-- S.No Column -->
     <ng-container matColumnDef="S.No">
@@ -27,8 +27,21 @@
       <td mat-cell *matCellDef="let password"> {{password.password}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="DeletePassword">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td class="col col-delete" mat-cell *matCellDef="let password, let i=index">
+        <!-- <button mat-flat-button color="primary" (click)="DeletePass(password.id,i)"> Delete </button> -->
+        <button class="btn btn-delete" mat-fab color="primary" aria-label="Example icon button with a delete icon"
+          (click)="Deleted(password.id); myTable.renderRows()">
+          <mat-icon class="icon icon-delete">delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+
   </table>
 
   <mat-paginator showFirstLastButtons [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 50]">
